# tspm-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  tspm.toml
crates/tspm-cli/: Cargo.toml
crates/tspm-cli/src/: cli.rs  main.rs
crates/tspm-cli/src/commands/: handlers.rs
crates/tspm-core/: Cargo.toml
crates/tspm-core/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs  utils.rs
crates/tspm-deploy/: Cargo.toml
crates/tspm-deploy/src/: deploy.rs  lib.rs  persistence.rs  startup.rs  webhook.rs
crates/tspm-engine/: Cargo.toml
crates/tspm-engine/src/: cluster.rs  lib.rs  load_balancer.rs  managed_process.rs  process_manager.rs  registry.rs  signal.rs
crates/tspm-events/: Cargo.toml
crates/tspm-events/src/: bus.rs  lib.rs
crates/tspm-logging/: Cargo.toml
crates/tspm-logging/src/: lib.rs  logger.rs  rotation.rs
crates/tspm-monitor/: Cargo.toml
crates/tspm-monitor/src/: health.rs  lib.rs  stats.rs
crates/tspm-server/: Cargo.toml  build.rs
crates/tspm-server/src/: api.rs  api_tests.rs  dashboard.rs  lib.rs  serve.rs
crates/tspm-server/src/api/: dump.rs  mod.rs  ports.rs  processes.rs  system.rs  utils.rs  ws.rs
web-preact/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-preact/src/: App.css  App.module.css  App.tsx  index.css  main.tsx  types.ts
web-preact/src/api/: client.ts
web-preact/src/components/: AnsiText.tsx  Dialog.module.css  Dialog.tsx  Icons.tsx  LogsViewer.module.css  LogsViewer.tsx  PortsView.tsx  ProcessForm.module.css  ProcessForm.tsx  ProcessTable.tsx  StatsBar.module.css  StatsBar.tsx  Terminal.tsx
web-preact/src/hooks/: useProcesses.ts  useSystemStats.ts  useWebSocket.ts
web-preact/src/styles/: LogsViewer.module.css  ProcessTable.module.css  Terminal.module.css
