[package]
name = "tspm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true
time.workspace = true
libc.workspace = true
