[package]
name = "tspm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
nix.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
libc.workspace = true
tspm-core.workspace = true
tspm-events.workspace = true
procfs = "0.17"
