[package]
name = "tspm-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
procfs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
time.workspace = true
libc.workspace = true
tspm-core.workspace = true
tspm-events.workspace = true
tspm-engine.workspace = true
