[package]
name = "tspm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-stream = "0.3"
tspm-core.workspace = true
tspm-events.workspace = true
tspm-engine.workspace = true
tspm-monitor.workspace = true
tspm-deploy.workspace = true
libc.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { workspace = true }
